@@ -29,6 +29,8 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -54,7 +56,7 @@ public class MyBookService {
     @Autowired
     PackageReadRepository PRrepo;
 
-
+private static final Logger logger = LoggerFactory.getLogger(MyBookService.class);
    public ResponseEntity<ResultDto<?>> createMybook(int orderId, int userDetailId) {
     try {
         // Lấy UserDetail từ userDetailId
@@ -115,22 +117,7 @@ public class MyBookService {
             MBrepo.save(mybook);
             }
 
-//            // Tạo mới CurrentPage với current_page_index = 0
-//            CurrentPage currentPage = new CurrentPage();
-//            currentPage.setCurrenPageIndex(0);
-//            currentPage.setImagePageData(book.getFilePdf().getFile_data()); // Assuming this field exists
-//            CPrepo.save(currentPage);
-//
-//            // Tạo Mybook mới và lưu vào cơ sở dữ liệu
-//            Mybook mybook = Mybook.builder()
-//                    .userDetail(userDetail)
-//                    .book(book)
-//                    .currentpage(currentPage)
-//                    .createAt(LocalDateTime.now())
-//                    .ExpiredDate(expiredDate)
-//                    .build();
-//
-//            MBrepo.save(mybook);
+
         }
 
         ResultDto<?> response = ResultDto.builder()
@@ -156,7 +143,7 @@ public class MyBookService {
 
 
     //show list mybook
-    public ResponseEntity<ResultDto<?>> ShowMybooklist(int userdetailid) {
+     public ResponseEntity<ResultDto<?>> ShowMybooklist(int userdetailid) {
         try {
             Optional<UserDetail> optionalUD = UDrepo.findById(userdetailid);
             if (optionalUD.isEmpty()) {
@@ -173,31 +160,28 @@ public class MyBookService {
                         MBUserRes mbUserRes = new MBUserRes();
                         mbUserRes.setBookname(mybook.getBook().getName());
                         mbUserRes.setBookid(mybook.getBook().getId());
-                        mbUserRes.setMybookid(mybook.getId()); // Assuming one author per book for simplicity
+                        mbUserRes.setMybookid(mybook.getId());
                         mbUserRes.setExpiredDate(mybook.getExpiredDate());
-                        Long daysDif = ChronoUnit.DAYS.between(LocalDateTime.now(), mybook.getExpiredDate());
+
+                        Long daysDif = mybook.getExpiredDate() != null ? ChronoUnit.DAYS.between(LocalDateTime.now(), mybook.getExpiredDate()) : null;
+                        
                         if (mybook.getExpiredDate() == null) {
-                            //mua
                             mbUserRes.setDays(0);
                             mbUserRes.setStatus(0);
                         } else if (daysDif > 3) {
-                            //con han
                             mbUserRes.setDays((int) Math.abs(daysDif));
                             mbUserRes.setStatus(1);
                         } else if (daysDif < 0) {
-                            //het han
                             mbUserRes.setDays(0);
                             mbUserRes.setStatus(3);
                         } else {
-                            //sap het han
                             mbUserRes.setDays((int) Math.abs(daysDif));
                             mbUserRes.setStatus(2);
                         }
 
-                        // Lấy hình ảnh từ danh sách imagebook có cover = 1
                         byte[] coverImage = mybook.getBook().getFilePdf().getImagesbook().stream()
                                 .filter(c -> c.isCover())
-                                .map(c -> c.getImage_data())
+                                .map(ImagesBook::getImage_data)
                                 .findFirst()
                                 .orElse(null);
 
@@ -205,7 +189,7 @@ public class MyBookService {
 
                         return mbUserRes;
                     })
-                    .toList();
+                    .collect(Collectors.toList());
 
             ResultDto<List<MBUserRes>> response = ResultDto.<List<MBUserRes>>builder()
                     .status(true)
@@ -215,11 +199,12 @@ public class MyBookService {
             return new ResponseEntity<>(response, HttpStatus.OK);
 
         } catch (Exception e) {
+            logger.error("Error fetching Mybooks for userDetailId {}: {}", userdetailid, e.getMessage(), e);
             ResultDto<?> response = ResultDto.builder()
                     .status(false)
                     .message("Failed to fetch Mybooks: " + e.getMessage())
                     .build();
-            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+            return new ResponseEntity<>(response, HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
 }
